Replace page title and update HTML structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nynbc Studio y Boutique</title>
+  <title>SEXO SEXO SEXO</title>
 
   <style>
     :root {
@@ -231,3 +231,4 @@
 
 </body>
 </html>
+
